--- a/ConsoleExample/readme
+++ b/ConsoleExample/readme
@@ -1,3 +1,3 @@
-Παραδειγμα της αληλεπιδρασης μεταξυ των κινηματογραφων με το συστημα. Εχουν δυνατοτητες προσθηκης ταινιας απο μια λιστα ανερχομενων ταινιων, 
+Παραδειγμα της αληλεπιδρασης των κινηματογραφων με το συστημα. Εχουν δυνατοτητες προσθηκης ταινιας απο μια λιστα ανερχομενων ταινιων, 
 και προσθηκης προβολων για τη ταινια. Επειτα μπορουν να επεξεργαστουν τις προβολες, να προσθεσουν νεες ή και να διαγραψουν. Τελος μπορουν να 
 διαγραψουν μια ταινια απο τη λιστα των ταινιων που παιζουν στο σινεμα.
